--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,3 +34,4 @@ learingpath.cors.cors.allow-credentials=true
 learingpath.cors.cors.max-age=1800
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=10MB
+spring.jpa.show-sql=true
