solve localdatetime issue

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,7 +30,7 @@ learingpath.cors.cors.allowed-origins=*
 learingpath.cors.cors.allowed-methods=*
 learingpath.cors.cors.allowed-headers=*
 learingpath.cors.cors.exposed-headers=Authorization,Link,X-Total-Count
-learingpath.cors.cors.allow-credentials=true
+learingpath.cors.cors.allow-credentials=false
 learingpath.cors.cors.max-age=1800
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=10MB
